update java thread and process